Got the CSS working

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-/* :root {
+:root {
     --font-family:
     -apple-system, blinkmacsystemfont, 'Segoe UI', roboto, oxygen, ubuntu, cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --font-family--mono:
@@ -31,7 +31,7 @@
     --surface-shadow: 0 1px 1px 0 rgb(66 66 66 / 8%), 0 1px 3px 1px rgb(66 66 66 / 16%);
     --surface-overlay: 0.02;
     --surface-color: rgba(var(--rgb-white), var(--surface-overlay))
-} */
+}
 
 @media (prefers-color-scheme: dark) {
     :root {
